--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -117,7 +117,7 @@ jobs:
   build-and-push:
     needs: [test, security-scan]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && secrets.REGISTRY_LOGIN_SERVER != ''
     
     steps:
     - uses: actions/checkout@v4
@@ -128,9 +128,9 @@ jobs:
     - name: Log in to Azure Container Registry
       uses: azure/docker-login@v1
       with:
-        login-server: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}
-        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+        login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
     
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
@@ -138,8 +138,8 @@ jobs:
         context: .
         push: true
         tags: |
-          ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/doctor-appointment:latest
-          ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/doctor-appointment:${{ github.sha }}
+          ${{ secrets.REGISTRY_LOGIN_SERVER }}/doctor-appointment:latest
+          ${{ secrets.REGISTRY_LOGIN_SERVER }}/doctor-appointment:${{ github.sha }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
