--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -117,7 +117,7 @@ jobs:
   build-and-push:
     needs: [test, security-scan]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && secrets.REGISTRY_LOGIN_SERVER != ''
+    if: github.ref == 'refs/heads/main'
     
     steps:
     - uses: actions/checkout@v4
@@ -126,6 +126,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
     
     - name: Log in to Azure Container Registry
+      if: ${{ secrets.REGISTRY_LOGIN_SERVER != '' }}
       uses: azure/docker-login@v1
       with:
         login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
@@ -133,6 +134,7 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }}
     
     - name: Build and push Docker image
+      if: ${{ secrets.REGISTRY_LOGIN_SERVER != '' }}
       uses: docker/build-push-action@v5
       with:
         context: .
