--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -126,7 +126,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
     
     - name: Log in to Azure Container Registry
-      if: ${{ secrets.REGISTRY_LOGIN_SERVER != '' }}
+      if: ${{ secrets.REGISTRY_LOGIN_SERVER }}
       uses: azure/docker-login@v1
       with:
         login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
@@ -134,7 +134,7 @@ jobs:
         password: ${{ secrets.REGISTRY_PASSWORD }}
     
     - name: Build and push Docker image
-      if: ${{ secrets.REGISTRY_LOGIN_SERVER != '' }}
+      if: ${{ secrets.REGISTRY_LOGIN_SERVER }}
       uses: docker/build-push-action@v5
       with:
         context: .
