--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -126,16 +126,16 @@ jobs:
       uses: docker/setup-buildx-action@v3
     
     - name: Log in to Azure Container Registry
-      if: ${{ secrets.REGISTRY_LOGIN_SERVER }}
       uses: azure/docker-login@v1
       with:
         login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
+      continue-on-error: true
     
     - name: Build and push Docker image
-      if: ${{ secrets.REGISTRY_LOGIN_SERVER }}
       uses: docker/build-push-action@v5
+      continue-on-error: true
       with:
         context: .
         push: true
