--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -157,20 +157,25 @@ jobs:
     - name: Azure Login
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      continue-on-error: true
     
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        images: ${{ secrets.AZURE_REGISTRY_LOGIN_SERVER }}/doctor-appointment:${{ github.sha }}
+        app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+        images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/doctor-appointment:${{ github.sha }}
+      continue-on-error: true
     
     - name: Run database migrations
       uses: azure/CLI@v1
       with:
         inlineScript: |
-          az webapp config appsettings set --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name ${{ env.AZURE_WEBAPP_NAME }} --settings DJANGO_SETTINGS_MODULE=doctor_appointment.settings_prod
-          az webapp ssh --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name ${{ env.AZURE_WEBAPP_NAME }} --command "python manage.py migrate"
+          az webapp config appsettings set --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name ${{ secrets.AZURE_WEBAPP_NAME }} --settings DJANGO_SETTINGS_MODULE=doctor_appointment.settings_prod
+          az webapp ssh --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name ${{ secrets.AZURE_WEBAPP_NAME }} --command "python manage.py migrate"
+      continue-on-error: true
 
   notify:
     needs: [deploy-to-azure]
